--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,26 +2,18 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
+  - name: init-conf-dirs
+    init: ./scripts/init-conf-dirs.sh
+    
   - name: minio-server
-    init: |
-      mkdir -p /workspace/minio/data
-    command: |
-      export MINIO_OPTS="$MINIO_OPTS --address :9000 --console-address :9090"
-      export MINIO_ROOT_USER="${MINIO_ROOT_USER:-admin}"
-      export MINIO_ROOT_PASSWORD="${MINIO_ROOT_PASSWORD:-adminadmin}"
-      export MINIO_VOLUMES="/workspace/minio/data"
-
-      minio server $MINIO_OPTS $MINIO_VOLUMES
+    command: ./scripts/start-minio-server.sh
 
   - name: livy-server
-    command: $LIVY_HOME/bin/livy-server
-
+    command: ./scripts/start-livy-server.sh
+    
   - name: jupyter-server
-    before: mkdir -p notebook
-    init: |
-      jupyter notebook --generate-config
-      sed -i "s/^# c.NotebookApp.token = .*/c.NotebookApp.token = ''/" $HOME/.jupyter/jupyter_notebook_config.py
-    command: jupyter notebook --no-browser --ip 0.0.0.0 --notebook-dir=./notebook
+    init: ./scripts/init-jupyter-server.sh
+    command: ./scripts/start-jupyter-server.sh
 
 ports:
   - name: minio-s3
