--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@ image:
 tasks:
   - name: init-conf-dirs
     init: ./scripts/init-conf-dirs.sh
+    command: gp sync-done init-conf-dirs
     
   - name: init-spark-deps
     init: ./scripts/init-spark-deps.sh
@@ -12,11 +13,15 @@ tasks:
     command: ./scripts/start-minio-server.sh
 
   - name: livy-server
-    command: ./scripts/start-livy-server.sh
+    command: |
+      gp sync-await init-conf-dirs
+      ./scripts/start-livy-server.sh
     
   - name: jupyter-server
     init: ./scripts/init-jupyter-server.sh
-    command: ./scripts/start-jupyter-server.sh
+    command: |
+      gp sync-await init-conf-dirs
+      ./scripts/start-jupyter-server.sh
 
 ports:
   - name: minio-s3
