--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,11 +22,6 @@ tasks:
       gp sync-await init-conf-dirs
       ./scripts/start-jupyter-server.sh
 
-  - name: spark-cluster
-    command: |
-      gp sync-await init-conf-dirs
-      ./scripts/start-spark-cluster.sh
-
 ports:
   - name: minio-s3
     description: MinIO S3
@@ -44,8 +39,18 @@ ports:
     onOpen: ignore
 
   - name: jupyter
-    description: Jupyter notebok server
+    description: Jupyter server
     port: 8888
+    onOpen: ignore
+
+  - name: spark-master
+    description: Spark Master
+    port: 7077
+    onOpen: ignore
+
+  - name: spark-master-ui
+    description: Spark Master UI
+    port: 8080
     onOpen: ignore
 
     
